--- a/src/app/components/school/school-info/school-info.component.html
+++ b/src/app/components/school/school-info/school-info.component.html
@@ -1,8 +1,8 @@
 <!-- INFO DA ESCOLA -->
 <div class="school-container row" *ngIf="school">
 
-    <h1>Escola <span>{{ school.nomeescola }}</span></h1>
-    <div class="col-6 iden">
+    <h1><span>{{ school.nomeescola }}</span></h1>
+    <div class="iden">
         <!-- <h1>Identificação</h1> -->
         <h3><b>Responsável:</b> {{ school.responsavel }}</h3>
         <h3><b>Razão Social:</b> {{ school.razaosocial }}</h3>
@@ -10,7 +10,7 @@
         <h3><b>Telefone:</b> {{ school.telefone }}</h3>
     </div>
 
-    <div class="col-6 end">
+    <div class="end">
         <!-- <h1>Endereço</h1> -->
         <ul>
             <li><b>Rua:</b> {{ school.rua }}</li>
@@ -27,9 +27,9 @@
 
 
 <!-- OPÇÕES -->
-<div *ngIf="school">
+<div *ngIf="school" class="btns-container">
     <div class="dropend">
-        <button type="button" class="btn btn-2 dropdown-toggle" data-bs-toggle="dropdown"
+        <button type="button" class="btn-step btn-2 dropdown-toggle" data-bs-toggle="dropdown"
             aria-expanded="false"><img src="../../../assets/classroom-icon-white.png">Turmas</button>
 
         <ul class="dropdown-menu">
@@ -39,7 +39,7 @@
     </div>
     <br>
     <div class="dropend">
-        <button type="button" class="btn btn-1 dropdown-toggle" data-bs-toggle="dropdown"
+        <button type="button" class="btn-step btn-1 dropdown-toggle" data-bs-toggle="dropdown"
             aria-expanded="false"><img src="../../../assets/school-icon-white.png">Escola</button>
 
         <ul class="dropdown-menu">
@@ -53,10 +53,12 @@
 <!-- LISTAGEM DAS TURMAS -->
 <h1 class="pb-5">Turmas</h1>
 
-<div class="classrooms-container" *ngIf="classrooms.length > 0;else noSchools">
+<div class="classroom-container" *ngIf="classrooms.length > 0;else noSchools">
+<!-- VIEW DESKTOP -->
+<div class="classrooms-desktop">
 
     <div class="classrooms-info">
-        <div class="inf">
+        <div class="year-title btn-4">
             <h5>INFANTIL</h5>
         </div>
         <div *ngFor="let classroom of classrooms" class="w-100">
@@ -69,7 +71,7 @@
     </div>
 
     <div class="classrooms-info">
-        <div class="fund-1">
+        <div class="year-title btn-2">
             <h5>FUNDAMENTAL 1</h5>
         </div>
         <div *ngFor="let classroom of classrooms" class="w-100">
@@ -82,7 +84,7 @@
     </div>
 
     <div class="classrooms-info">
-        <div class="fund-2">
+        <div class="year-title btn-3">
             <h5>FUNDAMENTAL 2</h5>
         </div>
         <div *ngFor="let classroom of classrooms" class="w-100">
@@ -95,7 +97,7 @@
     </div>
 
     <div class="classrooms-info">
-        <div class="med">
+        <div class="year-title btn-1">
             <h5>ENSINO MÉDIO</h5>
         </div>
         <div *ngFor="let classroom of classrooms" class="w-100">
@@ -108,8 +110,76 @@
     </div>
 
 </div>
+<!-- VIEW DESKTOP -->
 
-<ng-template #noSchools>
+<!-- VIEW MOBILE/TABLET -->
+<div class="classrooms-mobile">
+
+    <div class="classrooms-info">
+        <div class="year-title btn-4">
+            <h5 class="d-none d-md-block">INFANTIL</h5>
+            <button data-bs-toggle="collapse" data-bs-target="#multiCollapseExample1" aria-expanded="false"
+                aria-controls="multiCollapseExample1" class="d-md-none btn-collapse">INFANTIL</button>
+        </div>
+        <div *ngFor="let classroom of classrooms" class="collapse classroom-collapse" id="multiCollapseExample1">
+            <div *ngIf="classroom.schools_id == school?.id && classroom.ano == 'Infantil'" class="classroom">
+                <h5 class="m-0"><a routerLink="/school/{{ school?.id }}/classroom/{{ classroom.id }}">{{ classroom.ano
+                        }}</a>
+                </h5>
+            </div>
+        </div>
+    </div>
+
+    <div class="classrooms-info">
+        <div class="year-title btn-2">
+            <h5 class="d-none d-md-block">INFANTIL</h5>
+            <button data-bs-toggle="collapse" data-bs-target="#multiCollapseExample2" aria-expanded="false"
+                aria-controls="multiCollapseExample2" class="d-md-none btn-collapse">FUNDAMENTAL 1</button>
+        </div>
+        <div *ngFor="let classroom of classrooms" class="collapse classroom-collapse" id="multiCollapseExample2">
+            <div *ngIf="classroom.schools_id == school?.id && classroom.ano == 'Fundamental 1'" class="classroom">
+                <h5 class="m-0"><a routerLink="/school/{{ school?.id }}/classroom/{{ classroom.id }}">{{ classroom.ano
+                        }}</a>
+                </h5>
+            </div>
+        </div>
+    </div>
+
+    <div class="classrooms-info">
+        <div class="year-title btn-3">
+            <h5 class="d-none d-md-block">INFANTIL</h5>
+            <button data-bs-toggle="collapse" data-bs-target="#multiCollapseExample3" aria-expanded="false"
+                aria-controls="multiCollapseExample3" class="d-md-none btn-collapse">FUNDAMENTAL 2</button>
+        </div>
+        <div *ngFor="let classroom of classrooms" class="collapse classroom-collapse" id="multiCollapseExample3">
+            <div *ngIf="classroom.schools_id == school?.id && classroom.ano == 'Fundamental 2'" class="classroom">
+                <h5 class="m-0"><a routerLink="/school/{{ school?.id }}/classroom/{{ classroom.id }}">{{ classroom.ano
+                        }}</a>
+                </h5>
+            </div>
+        </div>
+    </div>
+
+    <div class="classrooms-info">
+        <div class="year-title btn-1">
+            <h5 class="d-none d-md-block">INFANTIL</h5>
+            <button data-bs-toggle="collapse" data-bs-target="#multiCollapseExample4" aria-expanded="false"
+                aria-controls="multiCollapseExample4" class="d-md-none btn-collapse">ENSINO MÉDIO</button>
+        </div>
+        <div *ngFor="let classroom of classrooms" class="collapse classroom-collapse" id="multiCollapseExample4">
+            <div *ngIf="classroom.schools_id == school?.id && classroom.ano == 'Ensino Médio'" class="classroom">
+                <h5 class="m-0"><a routerLink="/school/{{ school?.id }}/classroom/{{ classroom.id }}">{{ classroom.ano
+                        }}</a>
+                </h5>
+            </div>
+        </div>
+    </div>
+
+</div>
+<!-- VIEW MOBILE/TABLET -->
+</div>
+
+<ng-template #noSchools class="classrooms-container-mob">
     <h1>Não há turmas cadastradas!</h1>
 </ng-template>
 <!-- LISTAGEM DAS TURMAS -->
