Foi feito o cadastro de professor, a edição das informações das escolas, a edição das informações das turmas e o vínculo do usuário do professor nas turmas

--- a/src/app/components/home-step/home-step.component.html
+++ b/src/app/components/home-step/home-step.component.html
@@ -126,7 +126,7 @@
         <div class="btn-nav">
             <div class="year-title btn-4">
                 <button data-bs-toggle="collapse" data-bs-target="#multiCollapseExample5"
-                aria-expanded="false" aria-controls="multiCollapseExample5" class="btn-collapse"><img src="../../../assets/activity-icon-white.png">Escolas</button>
+                aria-expanded="false" aria-controls="multiCollapseExample5" class="btn-collapse"><img src="../../../assets/activity-icon-white.png">Atividades</button>
             </div>
             
             <div class="collapse classroom-collapse" id="multiCollapseExample5">
