--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -2,7 +2,7 @@
 
 <div class="login-container">
 
-    <!-- <div class="col-6 w-100">
+    <div class="col-6 w-100">
         <div class="mb-3">
             <label for="exampleInputEmail1" class="form-label">Email</label>
             <input type="email" class="form-control">
@@ -12,7 +12,7 @@
             <input type="password" class="form-control">
         </div>
         <button type="submit" class="btn btn-primary">Entrar</button>
-    </div> -->
+    </div>
 
     <!-- <form (submit)="login()">
         <input type="text" [(ngModel)]="email" placeholder="Email">
