--- a/src/app/components/school/classroom-info/classroom-info.component.html
+++ b/src/app/components/school/classroom-info/classroom-info.component.html
@@ -1,9 +1,52 @@
 <div class="classroom-container row" *ngIf="classroom">
 
-    <h1>Professor: <span>{{ classroom.professor }}</span></h1>
-    <div class="col-6 iden">
-        <h3><b>Número de alunos:</b> {{ classroom.numeroalunos }}</h3>
-        <h3><b>Turma:</b> {{ classroom.ano }}</h3>
-        <h3><b>Período:</b> {{ classroom.periodo }}</h3>
-        <h3><b>Dia da semana:</b> {{ classroom.dia }}</h3>
-    </div>
+  <div class="classroom">
+    <h1>Turma: <span>{{ classroom.turma }}</span></h1>
+  </div>
+
+  <div class="iden">
+    <h3><b>Número de alunos:</b> {{ classroom.numeroalunos }}</h3>
+    <h3><b>Ano:</b> {{ classroom.ano }}</h3>
+    <h3><b>Período:</b> {{ classroom.periodo }}</h3>
+    <h3><b>Dia:</b> {{ classroom.dia }}</h3>
+  </div>
+
+</div>
+
+<div *ngIf="classroom" class="btns-container">
+  <div class="dropend">
+    <button type="button" class="btn-step btn-2 dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false"><img
+        src="../../../assets/classroom-icon-white.png">Turma</button>
+
+    <ul class="dropdown-menu">
+      <li><a routerLink="/classroom/edit/{{ classroom!.id }}" class="link">Editar</a></li>
+    </ul>
+  </div>
+</div>
+
+<div class="d-flex align-items-start mt-5">
+  <div class="nav flex-column nav-pills me-3" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+    <button class="nav-link active" id="v-pills-home-tab" data-bs-toggle="pill" data-bs-target="#v-pills-home"
+      type="button" role="tab" aria-controls="v-pills-home" aria-selected="true">Home</button>
+
+    <button class="nav-link" id="v-pills-profile-tab" data-bs-toggle="pill" data-bs-target="#v-pills-profile"
+      type="button" role="tab" aria-controls="v-pills-profile" aria-selected="false">Profile</button>
+
+    <button class="nav-link" id="v-pills-messages-tab" data-bs-toggle="pill" data-bs-target="#v-pills-messages"
+      type="button" role="tab" aria-controls="v-pills-messages" aria-selected="false">Messages</button>
+
+    <button class="nav-link" id="v-pills-settings-tab" data-bs-toggle="pill" data-bs-target="#v-pills-settings"
+      type="button" role="tab" aria-controls="v-pills-settings" aria-selected="false">Settings</button>
+
+  </div>
+  <div class="tab-content" id="v-pills-tabContent">
+    <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab"
+      tabindex="0">Teste 1</div>
+    <div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab" tabindex="0">
+      Teste 2</div>
+    <div class="tab-pane fade" id="v-pills-messages" role="tabpanel" aria-labelledby="v-pills-messages-tab"
+      tabindex="0">Teste 4</div>
+    <div class="tab-pane fade" id="v-pills-settings" role="tabpanel" aria-labelledby="v-pills-settings-tab"
+      tabindex="0">Teste 5</div>
+  </div>
+</div>
