--- a/src/app/components/school/school-info/school-info.component.css
+++ b/src/app/components/school/school-info/school-info.component.css
@@ -5,19 +5,23 @@
         background-color: rgb(235, 235, 235);
         display: flex;
         align-items: center;
-        margin: 50px 0 50px 0;
+        margin: 50px 0;
         padding: 10px;
     }
 
     .iden {
         text-align: right;
         width: 50%;
+        border-right: 2px solid black;
     }
 
     .end {
         width: 50%;
         text-align: start;
-        border-left: 2px solid black;
+    }
+
+    .classroom-container {
+        margin-bottom: 50px;
     }
 
     .classrooms-desktop {
@@ -76,9 +80,7 @@
 
 @media(max-width: 768px) {
     .iden h3 {
-        /* text-align: right; */
         font-size: 20px;
-        /* width: 50%; */
     }
 
     .school-container {
@@ -87,9 +89,7 @@
     }
 
     .end {
-        /* width: 50%; */
         text-align: start;
-        /* border-left: 2px solid black; */
     }
 
     .btns-container {
@@ -140,6 +140,16 @@ h5 {
     margin: 0;
 }
 
+p {
+    margin: 0;
+}
+
+.classroom a {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 
 .dropend img {
     width: 32px;
