--- a/src/app/components/school/school-info/school-info.component.html
+++ b/src/app/components/school/school-info/school-info.component.html
@@ -30,11 +30,10 @@
 <div *ngIf="school" class="btns-container">
     <div class="dropend">
         <button type="button" class="btn-step btn-2 dropdown-toggle" data-bs-toggle="dropdown"
-            aria-expanded="false"><img src="../../../assets/classroom-icon-white.png">Turmas</button>
+            aria-expanded="false"><img src="../../../assets/classroom-icon-white.png">Turma</button>
 
         <ul class="dropdown-menu">
             <li><a routerLink="/school/{{ school.id }}/classroom/new" class="link">Cadastrar</a></li>
-            <li><a routerLink="" class="link">Editar</a></li>
         </ul>
     </div>
     <br>
@@ -43,7 +42,16 @@
             aria-expanded="false"><img src="../../../assets/school-icon-white.png">Escola</button>
 
         <ul class="dropdown-menu">
-            <li><a routerLink="" class="link">Editar</a></li>
+            <li><a routerLink="/school/edit/{{ school.id }}" class="link">Editar</a></li>
+        </ul>
+    </div>
+    <br>
+    <div class="dropend">
+        <button type="button" class="btn-step btn-5 dropdown-toggle" data-bs-toggle="dropdown"
+            aria-expanded="false"><img src="../../../assets/school-icon-white.png">Professor</button>
+
+        <ul class="dropdown-menu">
+            <li><a routerLink="/school/{{ school.id }}/teacher/new" class="link">Cadastrar</a></li>
         </ul>
     </div>
 </div>
@@ -51,132 +59,140 @@
 
 
 <!-- LISTAGEM DAS TURMAS -->
-<h1 class="pb-5">Turmas</h1>
+<h1 class="pb-5">TURMAS</h1>
 
 <div class="classroom-container" *ngIf="classrooms.length > 0;else noSchools">
-<!-- VIEW DESKTOP -->
-<div class="classrooms-desktop">
+    <!-- VIEW DESKTOP -->
+    <div class="classrooms-desktop">
 
-    <div class="classrooms-info">
-        <div class="year-title btn-4">
-            <h5>INFANTIL</h5>
-        </div>
-        <div *ngFor="let classroom of classrooms" class="w-100">
-            <div *ngIf="classroom.schools_id == school?.id && classroom.ano == 'Infantil'" class="classroom">
-                <h5 class="m-0"><a routerLink="/school/{{ school?.id }}/classroom/{{ classroom.id }}">{{ classroom.ano
-                        }}</a>
-                </h5>
+        <div class="classrooms-info">
+            <div class="year-title btn-4">
+                <h5>INFANTIL</h5>
+            </div>
+            <div *ngFor="let classroom of classrooms" class="w-100">
+                <div *ngIf="classroom.schools_id == school?.id && classroom.ano == 'Infantil'" class="classroom">
+                    <a routerLink="/school/{{ school?.id }}/classroom/{{ classroom.id }}">
+                        <h5 class="m-0">{{ classroom.turma }}</h5>
+                        <p>{{ classroom.numeroalunos }} alunos</p>
+                    </a>
+                </div>
             </div>
         </div>
-    </div>
 
-    <div class="classrooms-info">
-        <div class="year-title btn-2">
-            <h5>FUNDAMENTAL 1</h5>
-        </div>
-        <div *ngFor="let classroom of classrooms" class="w-100">
-            <div *ngIf="classroom.schools_id == school?.id && classroom.ano == 'Fundamental 1'" class="classroom">
-                <h5 class="m-0"><a routerLink="/school/{{ school?.id }}/classroom/{{ classroom.id }}">{{ classroom.ano
-                        }}</a>
-                </h5>
+        <div class="classrooms-info">
+            <div class="year-title btn-2">
+                <h5>FUNDAMENTAL 1</h5>
+            </div>
+            <div *ngFor="let classroom of classrooms" class="w-100">
+                <div *ngIf="classroom.schools_id == school?.id && classroom.ano == 'Fundamental 1'" class="classroom">
+                    <a routerLink="/school/{{ school?.id }}/classroom/{{ classroom.id }}">
+                        <h5 class="m-0">{{ classroom.turma }}</h5>
+                        <p>{{ classroom.numeroalunos }} alunos</p>
+                    </a>
+                </div>
             </div>
         </div>
-    </div>
 
-    <div class="classrooms-info">
-        <div class="year-title btn-3">
-            <h5>FUNDAMENTAL 2</h5>
-        </div>
-        <div *ngFor="let classroom of classrooms" class="w-100">
-            <div *ngIf="classroom.schools_id == school?.id && classroom.ano == 'Fundamental 2'" class="classroom">
-                <h5 class="m-0"><a routerLink="/school/{{ school?.id }}/classroom/{{ classroom.id }}">{{ classroom.ano
-                        }}</a>
-                </h5>
+        <div class="classrooms-info">
+            <div class="year-title btn-3">
+                <h5>FUNDAMENTAL 2</h5>
+            </div>
+            <div *ngFor="let classroom of classrooms" class="w-100">
+                <div *ngIf="classroom.schools_id == school?.id && classroom.ano == 'Fundamental 2'" class="classroom">
+                    <a routerLink="/school/{{ school?.id }}/classroom/{{ classroom.id }}">
+                        <h5 class="m-0">{{ classroom.turma }}</h5>
+                        <p>{{ classroom.numeroalunos }} alunos</p>
+                    </a>
+                </div>
             </div>
         </div>
-    </div>
 
-    <div class="classrooms-info">
-        <div class="year-title btn-1">
-            <h5>ENSINO MÉDIO</h5>
-        </div>
-        <div *ngFor="let classroom of classrooms" class="w-100">
-            <div *ngIf="classroom.schools_id == school?.id && classroom.ano == 'Ensino médio'" class="classroom">
-                <h5 class="m-0"><a routerLink="/school/{{ school?.id }}/classroom/{{ classroom.id }}">{{ classroom.ano
-                        }}</a>
-                </h5>
+        <div class="classrooms-info">
+            <div class="year-title btn-1">
+                <h5>ENSINO MÉDIO</h5>
+            </div>
+            <div *ngFor="let classroom of classrooms" class="w-100">
+                <div *ngIf="classroom.schools_id == school?.id && classroom.ano == 'Ensino Médio'" class="classroom">
+                    <a routerLink="/school/{{ school?.id }}/classroom/{{ classroom.id }}">
+                        <h5 class="m-0">{{ classroom.turma }}</h5>
+                        <p>{{ classroom.numeroalunos }} alunos</p>
+                    </a>
+                </div>
             </div>
         </div>
+
     </div>
+    <!-- VIEW DESKTOP -->
 
-</div>
-<!-- VIEW DESKTOP -->
+    <!-- VIEW MOBILE/TABLET -->
+    <div class="classrooms-mobile">
 
-<!-- VIEW MOBILE/TABLET -->
-<div class="classrooms-mobile">
-
-    <div class="classrooms-info">
-        <div class="year-title btn-4">
-            <h5 class="d-none d-md-block">INFANTIL</h5>
-            <button data-bs-toggle="collapse" data-bs-target="#multiCollapseExample1" aria-expanded="false"
-                aria-controls="multiCollapseExample1" class="d-md-none btn-collapse">INFANTIL</button>
-        </div>
-        <div *ngFor="let classroom of classrooms" class="collapse classroom-collapse" id="multiCollapseExample1">
-            <div *ngIf="classroom.schools_id == school?.id && classroom.ano == 'Infantil'" class="classroom">
-                <h5 class="m-0"><a routerLink="/school/{{ school?.id }}/classroom/{{ classroom.id }}">{{ classroom.ano
-                        }}</a>
-                </h5>
+        <div class="classrooms-info">
+            <div class="year-title btn-4">
+                <h5 class="d-none d-md-block">INFANTIL</h5>
+                <button data-bs-toggle="collapse" data-bs-target="#multiCollapseExample1" aria-expanded="false"
+                    aria-controls="multiCollapseExample1" class="d-md-none btn-collapse">INFANTIL</button>
+            </div>
+            <div *ngFor="let classroom of classrooms" class="collapse classroom-collapse" id="multiCollapseExample1">
+                <div *ngIf="classroom.schools_id == school?.id && classroom.ano == 'Infantil'" class="classroom">
+                    <a routerLink="/school/{{ school?.id }}/classroom/{{ classroom.id }}">
+                        <h5 class="m-0">{{ classroom.turma }}</h5>
+                        <p>{{ classroom.numeroalunos }} alunos</p>
+                    </a>
+                </div>
             </div>
         </div>
-    </div>
 
-    <div class="classrooms-info">
-        <div class="year-title btn-2">
-            <h5 class="d-none d-md-block">INFANTIL</h5>
-            <button data-bs-toggle="collapse" data-bs-target="#multiCollapseExample2" aria-expanded="false"
-                aria-controls="multiCollapseExample2" class="d-md-none btn-collapse">FUNDAMENTAL 1</button>
-        </div>
-        <div *ngFor="let classroom of classrooms" class="collapse classroom-collapse" id="multiCollapseExample2">
-            <div *ngIf="classroom.schools_id == school?.id && classroom.ano == 'Fundamental 1'" class="classroom">
-                <h5 class="m-0"><a routerLink="/school/{{ school?.id }}/classroom/{{ classroom.id }}">{{ classroom.ano
-                        }}</a>
-                </h5>
+        <div class="classrooms-info">
+            <div class="year-title btn-2">
+                <h5 class="d-none d-md-block">INFANTIL</h5>
+                <button data-bs-toggle="collapse" data-bs-target="#multiCollapseExample2" aria-expanded="false"
+                    aria-controls="multiCollapseExample2" class="d-md-none btn-collapse">FUNDAMENTAL 1</button>
+            </div>
+            <div *ngFor="let classroom of classrooms" class="collapse classroom-collapse" id="multiCollapseExample2">
+                <div *ngIf="classroom.schools_id == school?.id && classroom.ano == 'Fundamental 1'" class="classroom">
+                    <a routerLink="/school/{{ school?.id }}/classroom/{{ classroom.id }}">
+                        <h5 class="m-0">{{ classroom.turma }}</h5>
+                        <p>{{ classroom.numeroalunos }} alunos</p>
+                    </a>
+                </div>
             </div>
         </div>
-    </div>
 
-    <div class="classrooms-info">
-        <div class="year-title btn-3">
-            <h5 class="d-none d-md-block">INFANTIL</h5>
-            <button data-bs-toggle="collapse" data-bs-target="#multiCollapseExample3" aria-expanded="false"
-                aria-controls="multiCollapseExample3" class="d-md-none btn-collapse">FUNDAMENTAL 2</button>
-        </div>
-        <div *ngFor="let classroom of classrooms" class="collapse classroom-collapse" id="multiCollapseExample3">
-            <div *ngIf="classroom.schools_id == school?.id && classroom.ano == 'Fundamental 2'" class="classroom">
-                <h5 class="m-0"><a routerLink="/school/{{ school?.id }}/classroom/{{ classroom.id }}">{{ classroom.ano
-                        }}</a>
-                </h5>
+        <div class="classrooms-info">
+            <div class="year-title btn-3">
+                <h5 class="d-none d-md-block">INFANTIL</h5>
+                <button data-bs-toggle="collapse" data-bs-target="#multiCollapseExample3" aria-expanded="false"
+                    aria-controls="multiCollapseExample3" class="d-md-none btn-collapse">FUNDAMENTAL 2</button>
+            </div>
+            <div *ngFor="let classroom of classrooms" class="collapse classroom-collapse" id="multiCollapseExample3">
+                <div *ngIf="classroom.schools_id == school?.id && classroom.ano == 'Fundamental 2'" class="classroom">
+                    <a routerLink="/school/{{ school?.id }}/classroom/{{ classroom.id }}">
+                        <h5 class="m-0">{{ classroom.turma }}</h5>
+                        <p>{{ classroom.numeroalunos }} alunos</p>
+                    </a>
+                </div>
             </div>
         </div>
-    </div>
 
-    <div class="classrooms-info">
-        <div class="year-title btn-1">
-            <h5 class="d-none d-md-block">INFANTIL</h5>
-            <button data-bs-toggle="collapse" data-bs-target="#multiCollapseExample4" aria-expanded="false"
-                aria-controls="multiCollapseExample4" class="d-md-none btn-collapse">ENSINO MÉDIO</button>
-        </div>
-        <div *ngFor="let classroom of classrooms" class="collapse classroom-collapse" id="multiCollapseExample4">
-            <div *ngIf="classroom.schools_id == school?.id && classroom.ano == 'Ensino Médio'" class="classroom">
-                <h5 class="m-0"><a routerLink="/school/{{ school?.id }}/classroom/{{ classroom.id }}">{{ classroom.ano
-                        }}</a>
-                </h5>
+        <div class="classrooms-info">
+            <div class="year-title btn-1">
+                <h5 class="d-none d-md-block">INFANTIL</h5>
+                <button data-bs-toggle="collapse" data-bs-target="#multiCollapseExample4" aria-expanded="false"
+                    aria-controls="multiCollapseExample4" class="d-md-none btn-collapse">ENSINO MÉDIO</button>
+            </div>
+            <div *ngFor="let classroom of classrooms" class="collapse classroom-collapse" id="multiCollapseExample4">
+                <div *ngIf="classroom.schools_id == school?.id && classroom.ano == 'Ensino Médio'" class="classroom">
+                    <a routerLink="/school/{{ school?.id }}/classroom/{{ classroom.id }}">
+                        <h5 class="m-0">{{ classroom.turma }}</h5>
+                        <p>{{ classroom.numeroalunos }} alunos</p>
+                    </a>
+                </div>
             </div>
         </div>
-    </div>
 
-</div>
-<!-- VIEW MOBILE/TABLET -->
+    </div>
+    <!-- VIEW MOBILE/TABLET -->
 </div>
 
 <ng-template #noSchools class="classrooms-container-mob">
