--- a/src/app/components/school/school/school.component.html
+++ b/src/app/components/school/school/school.component.html
@@ -1,134 +1,137 @@
-<h1 class="pt-5">CADASTRO ESCOLA</h1>
+<form (ngSubmit)="submit()" [formGroup]="schoolForm" #formDir="ngForm" class="form-container">
 
-<form (ngSubmit)="submit()" [formGroup]="schoolForm" #formDir="ngForm" class="pb-5">
-    
-    <h2>Identificação</h2>
-    <div class="form-group">
-        <label for="nomeescola">Escola:</label>
-        <input type="text" placeholder="Nome da escola" formControlName="nomeescola" required>
-        <div *ngIf="nomeescola.invalid && formDir.submitted" class="validation-error">
-            <p *ngIf="nomeescola.errors?.['required']">O nome da escola é obrigatório</p>
-        </div>
-    </div>
-    
-    <div class="form-group">
-        <label for="razaosocial">Razão Social:</label>
-        <input type="text" placeholder="Razão social" formControlName="razaosocial" required>
-        <div *ngIf="razaosocial.invalid && formDir.submitted" class="validation-error">
-            <p *ngIf="razaosocial.errors?.['required']">A razão social é obrigatória</p>
-        </div>
-    </div>
-    
-    <div class="form-group">
-        <label for="cnpj">CNPJ:</label>
-        <input type="text" placeholder="Cnpj" formControlName="cnpj" required>
-        <div *ngIf="cnpj.invalid && formDir.submitted" class="validation-error">
-            <p *ngIf="cnpj.errors?.['required']">O CNPJ é obrigatório</p>
-        </div>
-    </div>
-    
-    <div class="form-group">
-        <label for="responsavel">Responsável:</label>
-        <input type="text" placeholder="Responsável pela escola" formControlName="responsavel" required>
-        <div *ngIf="responsavel.invalid && formDir.submitted" class="validation-error">
-            <p *ngIf="responsavel.errors?.['required']">Obrigatório informar um responsável</p>
-        </div>
-    </div>
-        
-    <div class="form-group">
-        <label for="telefone">Telefone:</label>
-        <input type="text" placeholder="Telefone de contato" formControlName="telefone" required>
-        <div *ngIf="telefone.invalid && formDir.submitted" class="validation-error">
-            <p *ngIf="telefone.errors?.['required']">O telefone é obrigatório</p>
-        </div>
-    </div>
+    <!-- Esse input só vai ser preenchido quando for edição do formulário -->
+    <input type="hidden" formControlName="id">
 
-    
-    <h2>Endereço</h2>
-
-    <div class="d-flex gap-2">
-        <div class="form-group street">
-            <label for="rua">Rua:</label>
-            <input type="text" placeholder="Rua da escola" formControlName="rua" required>
-            <div *ngIf="rua.invalid && formDir.submitted" class="validation-error">
-                <p *ngIf="rua.errors?.['required']">A rua é obrigatório</p>
+    <div class="iden-container">
+        <h2>Identificação</h2>
+        <div class="form-group">
+            <label for="nomeescola">Escola:</label>
+            <input type="text" placeholder="Nome da escola" formControlName="nomeescola" required>
+            <div *ngIf="nomeescola.invalid && formDir.submitted" class="validation-error">
+                <p *ngIf="nomeescola.errors?.['required']">O nome da escola é obrigatório</p>
             </div>
         </div>
-    
-        <div class="form-group street-number">
-            <label for="numero">Número:</label>
-            <input type="text" placeholder="Número da escola" formControlName="numero" required>
-            <div *ngIf="numero.invalid && formDir.submitted" class="validation-error">
-                <p *ngIf="numero.errors?.['required']">O número é obrigatório</p>
+
+        <div class="form-group">
+            <label for="razaosocial">Razão Social:</label>
+            <input type="text" placeholder="Razão social" formControlName="razaosocial" required>
+            <div *ngIf="razaosocial.invalid && formDir.submitted" class="validation-error">
+                <p *ngIf="razaosocial.errors?.['required']">A razão social é obrigatória</p>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label for="cnpj">CNPJ:</label>
+            <input type="text" placeholder="Cnpj" formControlName="cnpj" required>
+            <div *ngIf="cnpj.invalid && formDir.submitted" class="validation-error">
+                <p *ngIf="cnpj.errors?.['required']">O CNPJ é obrigatório</p>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label for="responsavel">Responsável:</label>
+            <input type="text" placeholder="Responsável pela escola" formControlName="responsavel" required>
+            <div *ngIf="responsavel.invalid && formDir.submitted" class="validation-error">
+                <p *ngIf="responsavel.errors?.['required']">Obrigatório informar um responsável</p>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label for="telefone">Telefone:</label>
+            <input type="text" placeholder="Telefone de contato" formControlName="telefone" required>
+            <div *ngIf="telefone.invalid && formDir.submitted" class="validation-error">
+                <p *ngIf="telefone.errors?.['required']">O telefone é obrigatório</p>
             </div>
         </div>
     </div>
 
-    <div class="d-flex gap-2">
-        <div class="form-group neighborhood">
-            <label for="bairro">Bairro:</label>
-            <input type="text" placeholder="Bairro da escola" formControlName="bairro" required>
-            <div *ngIf="bairro.invalid && formDir.submitted" class="validation-error">
-                <p *ngIf="bairro.errors?.['required']">O bairro é obrigatório</p>
+    <div class="end-container">
+        <h2>Endereço</h2>
+        <div class="d-flex">
+            <div class="form-group street">
+                <label for="rua">Rua:</label>
+                <input type="text" placeholder="Rua da escola" formControlName="rua" required>
+                <div *ngIf="rua.invalid && formDir.submitted" class="validation-error">
+                    <p *ngIf="rua.errors?.['required']">A rua é obrigatório</p>
+                </div>
+            </div>
+
+            <div class="form-group street-number">
+                <label for="numero">Número:</label>
+                <input type="text" placeholder="Número da escola" formControlName="numero" required>
+                <div *ngIf="numero.invalid && formDir.submitted" class="validation-error">
+                    <p *ngIf="numero.errors?.['required']">O número é obrigatório</p>
+                </div>
             </div>
         </div>
-    
-        <div class="form-group city">
-            <label for="cidade">Cidade:</label>
-            <input type="text" placeholder="Cidade da escola" formControlName="cidade" required>
-            <div *ngIf="cidade.invalid && formDir.submitted" class="validation-error">
-                <p *ngIf="cidade.errors?.['required']">A cidade é obrigatório</p>
+
+        <div class="d-flex">
+            <div class="form-group neighborhood">
+                <label for="bairro">Bairro:</label>
+                <input type="text" placeholder="Bairro da escola" formControlName="bairro" required>
+                <div *ngIf="bairro.invalid && formDir.submitted" class="validation-error">
+                    <p *ngIf="bairro.errors?.['required']">O bairro é obrigatório</p>
+                </div>
+            </div>
+
+            <div class="form-group city">
+                <label for="cidade">Cidade:</label>
+                <input type="text" placeholder="Cidade da escola" formControlName="cidade" required>
+                <div *ngIf="cidade.invalid && formDir.submitted" class="validation-error">
+                    <p *ngIf="cidade.errors?.['required']">A cidade é obrigatório</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="d-flex">
+            <div class="form-group state">
+                <label for="estado">Estado:</label>
+                <select formControlName="estado" required>
+                    <option value="Acre (AC)">Acre (AC)</option>
+                    <option value="Alagoas (AL)">Alagoas (AL)</option>
+                    <option value="Amapá (AP)">Amapá (AP)</option>
+                    <option value="Amazonas (AM)">Amazonas (AM)</option>
+                    <option value="Bahia (BA)">Bahia (BA)</option>
+                    <option value="Ceará (CE)">Ceará (CE)</option>
+                    <option value="Distrito Federal (DF)">Distrito Federal (DF)</option>
+                    <option value="Espírito Santo (ES)">Espírito Santo (ES)</option>
+                    <option value="Goiás (GO)">Goiás (GO)</option>
+                    <option value="Maranhão (MA)">Maranhão (MA)</option>
+                    <option value="Mato Grosso (MT)">Mato Grosso (MT)</option>
+                    <option value="Mato Grosso do Sul (MS)">Mato Grosso do Sul (MS)</option>
+                    <option value="Minas Gerais (MG)">Minas Gerais (MG)</option>
+                    <option value="Pará (PA)">Pará (PA)</option>
+                    <option value="Paraíba (PB)">Paraíba (PB)</option>
+                    <option value="Paraná (PR)">Paraná (PR)</option>
+                    <option value="Pernambuco (PE)">Pernambuco (PE)</option>
+                    <option value="Piauí (PI)">Piauí (PI)</option>
+                    <option value="Rio de Janeiro (RJ)">Rio de Janeiro (RJ)</option>
+                    <option value="Rio Grande do Norte (RN)">Rio Grande do Norte (RN)</option>
+                    <option value="Rio Grande do Sul (RS)">Rio Grande do Sul (RS)</option>
+                    <option value="Rondônia (RO)">Rondônia (RO)</option>
+                    <option value="Roraima (RR)">Roraima (RR)</option>
+                    <option value="Santa Catarina (SC)">Santa Catarina (SC)</option>
+                    <option value="São Paulo (SP)">São Paulo (SP)</option>
+                    <option value="Sergipe (SE)">Sergipe (SE)</option>
+                    <option value="Tocantins (TO)">Tocantins (TO)</option>
+                </select>
+                <div *ngIf="cidade.invalid && formDir.submitted" class="validation-error">
+                    <p *ngIf="cidade.errors?.['required']">O estado é obrigatório</p>
+                </div>
+            </div>
+
+            <div class="form-group zip-code">
+                <label for="cep">CEP:</label>
+                <input type="text" placeholder="Cep da escola" formControlName="cep" required>
+                <div *ngIf="cep.invalid && formDir.submitted" class="validation-error">
+                    <p *ngIf="cep.errors?.['required']">O CEP é obrigatório</p>
+                </div>
             </div>
         </div>
     </div>
 
-    <div class="d-flex gap-2">
-        <div class="form-group state">
-            <label for="estado">Estado:</label>
-            <select formControlName="estado" required>
-                <option value="Acre (AC)">Acre (AC)</option>
-                <option value="Alagoas (AL)">Alagoas (AL)</option>
-                <option value="Amapá (AP)">Amapá (AP)</option>
-                <option value="Amazonas (AM)">Amazonas (AM)</option>
-                <option value="Bahia (BA)">Bahia (BA)</option>
-                <option value="Ceará (CE)">Ceará (CE)</option>
-                <option value="Distrito Federal (DF)">Distrito Federal (DF)</option>
-                <option value="Espírito Santo (ES)">Espírito Santo (ES)</option>
-                <option value="Goiás (GO)">Goiás (GO)</option>
-                <option value="Maranhão (MA)">Maranhão (MA)</option>
-                <option value="Mato Grosso (MT)">Mato Grosso (MT)</option>
-                <option value="Mato Grosso do Sul (MS)">Mato Grosso do Sul (MS)</option>
-                <option value="Minas Gerais (MG)">Minas Gerais (MG)</option>
-                <option value="Pará (PA)">Pará (PA)</option>
-                <option value="Paraíba (PB)">Paraíba (PB)</option>
-                <option value="Paraná (PR)">Paraná (PR)</option>
-                <option value="Pernambuco (PE)">Pernambuco (PE)</option>
-                <option value="Piauí (PI)">Piauí (PI)</option>
-                <option value="Rio de Janeiro (RJ)">Rio de Janeiro (RJ)</option>
-                <option value="Rio Grande do Norte (RN)">Rio Grande do Norte (RN)</option>
-                <option value="Rio Grande do Sul (RS)">Rio Grande do Sul (RS)</option>
-                <option value="Rondônia (RO)">Rondônia (RO)</option>
-                <option value="Roraima (RR)">Roraima (RR)</option>
-                <option value="Santa Catarina (SC)">Santa Catarina (SC)</option>
-                <option value="São Paulo (SP)">São Paulo (SP)</option>
-                <option value="Sergipe (SE)">Sergipe (SE)</option>
-                <option value="Tocantins (TO)">Tocantins (TO)</option>
-            </select>
-            <div *ngIf="cidade.invalid && formDir.submitted" class="validation-error">
-                <p *ngIf="cidade.errors?.['required']">O estado é obrigatório</p>
-            </div>
-        </div>
-    
-        <div class="form-group zip-code">
-            <label for="cep">CEP:</label>
-            <input type="text" placeholder="Cep da escola" formControlName="cep" required>
-            <div *ngIf="cep.invalid && formDir.submitted" class="validation-error">
-                <p *ngIf="cep.errors?.['required']">O CEP é obrigatório</p>
-            </div>
-        </div>
-    </div>
-
-    <div class="btn-register">
+    <div class="btn-register mb-5">
         <input type="submit" value="{{ btnText }}">
     </div>
 
