--- a/src/app/components/school/school-info/school-info.component.html
+++ b/src/app/components/school/school-info/school-info.component.html
@@ -52,6 +52,7 @@
 
         <ul class="dropdown-menu">
             <li><a routerLink="/school/{{ school.id }}/teacher/new" class="link">Cadastrar</a></li>
+            <li><a routerLink="/school/{{ school.id }}/teacher/list" class="link">Listar</a></li>
         </ul>
     </div>
 </div>
