--- a/src/app/components/school/teacher-list/teacher-list.component.html
+++ b/src/app/components/school/teacher-list/teacher-list.component.html
@@ -1,12 +1,14 @@
 <div class="list-container">
 
-    <div *ngIf="teachers.length > 0;else noSchools" class="teachers-container">
+    <div *ngIf="teachers.length > 0;else noTeachers" class="teachers-container">
         <div class="teacher" *ngFor="let teacher of teachers">
-            <h1 class="m-0"><a routerLink="/teacher/{{ teacher.id }}">{{ teacher.email }}</a></h1>
+            <div *ngIf="teacher.schools_id == school?.id">
+                <h1 class="m-0">{{ teacher.email }}</h1>
+            </div>
         </div>
     </div>
 
-    <ng-template #noSchools>
+    <ng-template #noTeachers>
         <h1>Não há professores cadastrados!</h1>
     </ng-template>
 
