--- a/src/app/components/school/classroom-info/classroom-info.component.html
+++ b/src/app/components/school/classroom-info/classroom-info.component.html
@@ -1,3 +1,7 @@
+<div class="back-page">
+  <a routerLink="/school/{{ school?.id }}"><img src="assets/back-black.png">Voltar</a>
+</div>
+
 <div class="classroom-container row" *ngIf="classroom">
 
   <div class="classroom">
