--- a/src/app/components/school/edit-school/edit-school.component.html
+++ b/src/app/components/school/edit-school/edit-school.component.html
@@ -1,3 +1,7 @@
+<div class="back-page">
+    <a routerLink="/school/{{ school?.id }}"><img src="assets/back-black.png">Voltar</a>
+</div>
+
 <div *ngIf="school">
     <h1 class="pt-5"><span>{{ school.nomeescola }}</span></h1>
     <h2>EDITAR INFORMAÇÕES</h2>
