--- a/src/app/components/school/new-classroom/new-classroom.component.html
+++ b/src/app/components/school/new-classroom/new-classroom.component.html
@@ -1,1 +1,7 @@
+<div class="back-page">
+    <a routerLink="/school/{{ school?.id }}"><img src="assets/back-black.png">Voltar</a>
+</div>
+
+<h1 class="pb-5">CADASTRAR DE TURMA</h1>
+
 <app-classroom [btnText]="btnText" (onSubmit)="createHandler($event)"></app-classroom>
