--- a/src/app/components/school/teacher-info/teacher-info.component.html
+++ b/src/app/components/school/teacher-info/teacher-info.component.html
@@ -1,11 +1,11 @@
 <div class="teacher-container row" *ngIf="teacher">
 
     <div class="teacher">
-        <h1>Email: <span>{{ teacher.email }}</span></h1>
+        <h1>Nome: <span>{{ teacher.nome }}</span></h1>
     </div>
 
     <div class="iden">
-        <h3><b>ID:</b> {{ teacher.id }}</h3>
+        <h3><b>Email:</b> {{ teacher.email }}</h3>
         <h3><b>Criado em:</b> {{ teacher.created_at }}</h3>
         <h3><b>Atualizado em:</b> {{ teacher.updated_at }}</h3>
     </div>
