--- a/src/app/components/school/school-info/school-info.component.css
+++ b/src/app/components/school/school-info/school-info.component.css
@@ -78,7 +78,7 @@
     }
 }
 
-@media(max-width: 768px) {
+@media(max-width: 767px) {
     .iden h3 {
         font-size: 20px;
     }
@@ -138,6 +138,7 @@ span {
 
 h5 {
     margin: 0;
+    text-align: center;
 }
 
 p {
