--- a/src/app/components/school/school-info/school-info.component.html
+++ b/src/app/components/school/school-info/school-info.component.html
@@ -68,10 +68,10 @@
 
         <div class="classrooms-info">
             <div class="year-title btn-4">
-                <h5>INFANTIL</h5>
+                <h5>MATERNAL</h5>
             </div>
             <div *ngFor="let classroom of classrooms" class="w-100">
-                <div *ngIf="classroom.schools_id == school?.id && classroom.ano == 'Infantil'" class="classroom">
+                <div *ngIf="classroom.schools_id == school?.id && classroom.ano == 'Maternal'" class="classroom">
                     <a routerLink="/school/{{ school?.id }}/classroom/{{ classroom.id }}">
                         <h5 class="m-0">{{ classroom.turma }}</h5>
                         <p>{{ classroom.numeroalunos }} alunos</p>
@@ -82,7 +82,21 @@
 
         <div class="classrooms-info">
             <div class="year-title btn-2">
-                <h5>FUNDAMENTAL 1</h5>
+                <h5>PRÉ</h5>
+            </div>
+            <div *ngFor="let classroom of classrooms" class="w-100">
+                <div *ngIf="classroom.schools_id == school?.id && classroom.ano == 'Pré'" class="classroom">
+                    <a routerLink="/school/{{ school?.id }}/classroom/{{ classroom.id }}">
+                        <h5 class="m-0">{{ classroom.turma }}</h5>
+                        <p>{{ classroom.numeroalunos }} alunos</p>
+                    </a>
+                </div>
+            </div>
+        </div>
+
+        <div class="classrooms-info">
+            <div class="year-title btn-3">
+                <h5>FUND 1</h5>
             </div>
             <div *ngFor="let classroom of classrooms" class="w-100">
                 <div *ngIf="classroom.schools_id == school?.id && classroom.ano == 'Fundamental 1'" class="classroom">
@@ -95,8 +109,8 @@
         </div>
 
         <div class="classrooms-info">
-            <div class="year-title btn-3">
-                <h5>FUNDAMENTAL 2</h5>
+            <div class="year-title btn-1">
+                <h5>FUND 2</h5>
             </div>
             <div *ngFor="let classroom of classrooms" class="w-100">
                 <div *ngIf="classroom.schools_id == school?.id && classroom.ano == 'Fundamental 2'" class="classroom">
@@ -109,7 +123,7 @@
         </div>
 
         <div class="classrooms-info">
-            <div class="year-title btn-1">
+            <div class="year-title btn-5">
                 <h5>ENSINO MÉDIO</h5>
             </div>
             <div *ngFor="let classroom of classrooms" class="w-100">
@@ -130,12 +144,11 @@
 
         <div class="classrooms-info">
             <div class="year-title btn-4">
-                <h5 class="d-none d-md-block">INFANTIL</h5>
                 <button data-bs-toggle="collapse" data-bs-target="#multiCollapseExample1" aria-expanded="false"
-                    aria-controls="multiCollapseExample1" class="d-md-none btn-collapse">INFANTIL</button>
+                    aria-controls="multiCollapseExample1" class="d-md-none btn-collapse">MATERNAL</button>
             </div>
             <div *ngFor="let classroom of classrooms" class="collapse classroom-collapse" id="multiCollapseExample1">
-                <div *ngIf="classroom.schools_id == school?.id && classroom.ano == 'Infantil'" class="classroom">
+                <div *ngIf="classroom.schools_id == school?.id && classroom.ano == 'Maternal'" class="classroom">
                     <a routerLink="/school/{{ school?.id }}/classroom/{{ classroom.id }}">
                         <h5 class="m-0">{{ classroom.turma }}</h5>
                         <p>{{ classroom.numeroalunos }} alunos</p>
@@ -146,7 +159,21 @@
 
         <div class="classrooms-info">
             <div class="year-title btn-2">
-                <h5 class="d-none d-md-block">INFANTIL</h5>
+                <button data-bs-toggle="collapse" data-bs-target="#multiCollapseExample1" aria-expanded="false"
+                    aria-controls="multiCollapseExample1" class="d-md-none btn-collapse">PRÉ</button>
+            </div>
+            <div *ngFor="let classroom of classrooms" class="collapse classroom-collapse" id="multiCollapseExample1">
+                <div *ngIf="classroom.schools_id == school?.id && classroom.ano == 'Pré'" class="classroom">
+                    <a routerLink="/school/{{ school?.id }}/classroom/{{ classroom.id }}">
+                        <h5 class="m-0">{{ classroom.turma }}</h5>
+                        <p>{{ classroom.numeroalunos }} alunos</p>
+                    </a>
+                </div>
+            </div>
+        </div>
+
+        <div class="classrooms-info">
+            <div class="year-title btn-3">
                 <button data-bs-toggle="collapse" data-bs-target="#multiCollapseExample2" aria-expanded="false"
                     aria-controls="multiCollapseExample2" class="d-md-none btn-collapse">FUNDAMENTAL 1</button>
             </div>
@@ -161,8 +188,7 @@
         </div>
 
         <div class="classrooms-info">
-            <div class="year-title btn-3">
-                <h5 class="d-none d-md-block">INFANTIL</h5>
+            <div class="year-title btn-1">
                 <button data-bs-toggle="collapse" data-bs-target="#multiCollapseExample3" aria-expanded="false"
                     aria-controls="multiCollapseExample3" class="d-md-none btn-collapse">FUNDAMENTAL 2</button>
             </div>
@@ -177,8 +203,7 @@
         </div>
 
         <div class="classrooms-info">
-            <div class="year-title btn-1">
-                <h5 class="d-none d-md-block">INFANTIL</h5>
+            <div class="year-title btn-5">
                 <button data-bs-toggle="collapse" data-bs-target="#multiCollapseExample4" aria-expanded="false"
                     aria-controls="multiCollapseExample4" class="d-md-none btn-collapse">ENSINO MÉDIO</button>
             </div>
