--- a/src/app/components/school/school/school.component.html
+++ b/src/app/components/school/school/school.component.html
@@ -50,16 +50,16 @@
         <h2>Endereço</h2>
         <div class="d-flex">
             <div class="form-group street">
-                <label for="rua">Rua:</label>
-                <input type="text" placeholder="Rua da escola" formControlName="rua" required>
+                <label for="rua">Rua/Av:</label>
+                <input type="text" placeholder="Rua/av" formControlName="rua" required>
                 <div *ngIf="rua.invalid && formDir.submitted" class="validation-error">
-                    <p *ngIf="rua.errors?.['required']">A rua é obrigatório</p>
+                    <p *ngIf="rua.errors?.['required']">A rua/av é obrigatório</p>
                 </div>
             </div>
 
             <div class="form-group street-number">
                 <label for="numero">Número:</label>
-                <input type="text" placeholder="Número da escola" formControlName="numero" required>
+                <input type="text" placeholder="Número" formControlName="numero" required>
                 <div *ngIf="numero.invalid && formDir.submitted" class="validation-error">
                     <p *ngIf="numero.errors?.['required']">O número é obrigatório</p>
                 </div>
@@ -69,7 +69,7 @@
         <div class="d-flex">
             <div class="form-group neighborhood">
                 <label for="bairro">Bairro:</label>
-                <input type="text" placeholder="Bairro da escola" formControlName="bairro" required>
+                <input type="text" placeholder="Bairro" formControlName="bairro" required>
                 <div *ngIf="bairro.invalid && formDir.submitted" class="validation-error">
                     <p *ngIf="bairro.errors?.['required']">O bairro é obrigatório</p>
                 </div>
@@ -77,7 +77,7 @@
 
             <div class="form-group city">
                 <label for="cidade">Cidade:</label>
-                <input type="text" placeholder="Cidade da escola" formControlName="cidade" required>
+                <input type="text" placeholder="Cidade" formControlName="cidade" required>
                 <div *ngIf="cidade.invalid && formDir.submitted" class="validation-error">
                     <p *ngIf="cidade.errors?.['required']">A cidade é obrigatório</p>
                 </div>
@@ -88,6 +88,7 @@
             <div class="form-group state">
                 <label for="estado">Estado:</label>
                 <select formControlName="estado" required>
+                    <option selected value="">Selecione o estado</option>
                     <option value="Acre (AC)">Acre (AC)</option>
                     <option value="Alagoas (AL)">Alagoas (AL)</option>
                     <option value="Amapá (AP)">Amapá (AP)</option>
@@ -123,7 +124,7 @@
 
             <div class="form-group zip-code">
                 <label for="cep">CEP:</label>
-                <input type="text" placeholder="Cep da escola" formControlName="cep" required>
+                <input type="text" placeholder="Cep" formControlName="cep" required>
                 <div *ngIf="cep.invalid && formDir.submitted" class="validation-error">
                     <p *ngIf="cep.errors?.['required']">O CEP é obrigatório</p>
                 </div>
