--- a/src/app/components/school/teacher/teacher.component.html
+++ b/src/app/components/school/teacher/teacher.component.html
@@ -1,8 +1,20 @@
+<div class="back-page">
+    <a routerLink="/school/{{ school?.id }}"><img src="assets/back-black.png">Voltar</a>
+</div>
+
 <h1 class="pt-5">CADASTRO DE PROFESSOR</h1>
 
 <form (ngSubmit)="submit()" [formGroup]="classroomForm" #formDir="ngForm" class="pb-5">
     
     <!-- <h2>Usuário do professor</h2> -->
+    <div class="form-group">
+        <label for="nome">Primeiro e último nome:</label>
+        <input type="text" placeholder="Primeiro e último nome" formControlName="nome" required>
+        <div *ngIf="nome.invalid && formDir.submitted" class="validation-error">
+            <p *ngIf="nome.errors?.['required']">O nome é obrigatório</p>
+        </div>
+    </div>
+
     <div class="form-group">
         <label for="email">Email:</label>
         <input type="text" placeholder="Email" formControlName="email" required>
@@ -17,14 +29,6 @@
         <div *ngIf="senha.invalid && formDir.submitted" class="validation-error">
             <p *ngIf="senha.errors?.['required']">A senha é obrigatória</p>
         </div>
-    </div>
-
-    <div class="form-group">
-        <label for="status">Status:</label>
-        <select formControlName="status">
-          <option selected>Ativo</option>
-          <option>Inativo</option>
-        </select>
     </div>
 
     <div class="btn-register">
