Cadastro, listagem, e edição de componentes finalizado.

--- a/src/app/components/home-step/home-step.component.html
+++ b/src/app/components/home-step/home-step.component.html
@@ -31,8 +31,8 @@
                 aria-expanded="false"><img src="../../../assets/component-icon-white.png">Componentes</button>
                 
             <ul class="dropdown-menu">
-                <li><a routerLink="" class="link">Cadastrar</a></li>
-                <li><a routerLink="" class="link">Listar</a></li>
+                <li><a routerLink="/componente/new" class="link">Cadastrar</a></li>
+                <li><a routerLink="/componente/list" class="link">Listar</a></li>
             </ul>
         </div>
 
@@ -101,8 +101,8 @@
             
             <div class="collapse classroom-collapse" id="multiCollapseExample3">
                 <ul>
-                    <li><a routerLink="" class="link">Cadastrar</a></li>
-                    <li><a routerLink="" class="link">Listar</a></li>
+                    <li><a routerLink="/componente/new" class="link">Cadastrar</a></li>
+                    <li><a routerLink="/componente/list" class="link">Listar</a></li>
                 </ul>
             </div>
         </div>
