--- a/src/app/components/step/componente-list/componente-list.component.css
+++ b/src/app/components/step/componente-list/componente-list.component.css
@@ -1,12 +1,13 @@
 @media(min-width: 767px) {
-    .school h1 {
+    .componente h1 {
         font-size: 30px;
     }
 
-    .school {
+    .componente {
         width: 48%;
         height: 100px;
         display: flex;
+        /* flex-direction: column; */
         justify-content: center;
         align-items: center;
         border: 1px solid  rgba(128, 128, 128, 0.300);
@@ -15,20 +16,51 @@
         background-color: white;
     }
 
-    .school a:hover {
+    .componente a:hover {
         color: #e30613;
+    }
+
+    .description {
+        width: 70%;
+        display: flex;
+        flex-direction: column;
+        justify-content: left;
+        margin-left: 10px;
+    }
+
+    .description h1 {
+        text-align: left;
+    }
+    
+    .edit-btn {
+        width: 30%;
+        display: flex;
+        justify-content: end;
+        margin-right: 20px;
+    }
+
+    .edit-btn img {
+        width: 50px;
+        margin-right: 6px;
+        padding: 10px;
+    }
+
+    .edit-btn img:hover {
+        background-color: #2daae0;
+        border-radius: 6px;
     }
 }
 
 @media(max-width: 768px) {
-    .school h1 {
+    .componente h1 {
         font-size: 24px;
     }
 
-    .school {
+    .componente {
         width: 100%;
         height: 100px;
         display: flex;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
         border: 1px solid  rgba(128, 128, 128, 0.300);
@@ -75,11 +107,15 @@
     background-color: white;
 }
 
-.schools-container {
+.componentes-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     width: 92%;
     margin: 0 4%;
+}
+
+p {
+    margin: 0;
 }
 
