--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,7 +2,7 @@
     
     <div class="step-logo">
         <a routerLink="/">
-            <img src="assets/step_logo_2.png">
+            <img src="assets/step-sete.png">
         </a>
     </div>
     
