--- a/src/app/components/home-step/home-step.component.html
+++ b/src/app/components/home-step/home-step.component.html
@@ -43,8 +43,8 @@
                 aria-expanded="false"><img src="../../../assets/kit-icon-white.png">Kits</button>
                 
             <ul class="dropdown-menu">
-                <li><a routerLink="" class="link">Cadastrar</a></li>
-                <li><a routerLink="" class="link">Listar</a></li>
+                <li><a routerLink="/kit/new" class="link">Cadastrar</a></li>
+                <li><a routerLink="/kit/list" class="link">Listar</a></li>
             </ul>
         </div>
 
@@ -115,8 +115,8 @@
             
             <div class="collapse classroom-collapse" id="multiCollapseExample4">
                 <ul>
-                    <li><a routerLink="" class="link">Cadastrar</a></li>
-                    <li><a routerLink="" class="link">Listar</a></li>
+                    <li><a routerLink="/kit/new" class="link">Cadastrar</a></li>
+                    <li><a routerLink="/kit/list" class="link">Listar</a></li>
                 </ul>
             </div>
         </div>
@@ -139,7 +139,7 @@
     <!-- VIEW MOBILE/TABLET -->
 
     <div class="image-container d-none d-md-block">
-        <img src="../../../assets/step_sete.png">
+        <img src="assets/sete-colorido.jpeg">
     </div>
 
 </div>
