--- a/src/app/components/step/user/user.component.html
+++ b/src/app/components/step/user/user.component.html
@@ -1,4 +1,4 @@
-<h1 class="pt-5">CADASTRO</h1>
+<h1 class="pt-5">CADASTRAR USUÁRIO</h1>
 
 <form (ngSubmit)="submit()" [formGroup]="userForm" #formDir="ngForm" class="user-form">
 
