--- a/src/app/components/step/componente-list/componente-list.component.css
+++ b/src/app/components/step/componente-list/componente-list.component.css
@@ -7,7 +7,6 @@
         width: 48%;
         height: 100px;
         display: flex;
-        /* flex-direction: column; */
         justify-content: center;
         align-items: center;
         border: 1px solid  rgba(128, 128, 128, 0.300);
@@ -16,38 +15,12 @@
         background-color: white;
     }
 
-    .componente a:hover {
-        color: #e30613;
-    }
-
     .description {
         width: 70%;
         display: flex;
         flex-direction: column;
         justify-content: left;
         margin-left: 10px;
-    }
-
-    .description h1 {
-        text-align: left;
-    }
-    
-    .edit-btn {
-        width: 30%;
-        display: flex;
-        justify-content: end;
-        margin-right: 20px;
-    }
-
-    .edit-btn img {
-        width: 50px;
-        margin-right: 6px;
-        padding: 10px;
-    }
-
-    .edit-btn img:hover {
-        background-color: #2daae0;
-        border-radius: 6px;
     }
 }
 
@@ -60,8 +33,7 @@
         width: 100%;
         height: 100px;
         display: flex;
-        flex-direction: column;
-        justify-content: center;
+        justify-content: end;
         align-items: center;
         border: 1px solid  rgba(128, 128, 128, 0.300);
         margin-bottom: 4%;
@@ -115,7 +87,37 @@
     margin: 0 4%;
 }
 
+
+.description {
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+    margin-left: 10px;
+}
+
+.edit-btn {
+    width: 20%;
+    display: flex;
+    justify-content: end;
+    margin-right: 20px;
+}
+
+.edit-btn img {
+    width: 50px;
+    margin-right: 6px;
+    padding: 10px;
+}
+
+.edit-btn img:hover {
+    background-color: #2daae0;
+    border-radius: 6px;
+}
+
+.description h1 {
+    text-align: left;
+}
+
 p {
     margin: 0;
 }
-
